# Jobbi

./: .env.example  .gitignore  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2bdf2ab73856_create_applications_and_status_history_.py  3fcc7e504f2f_create_password_reset_tokens_table.py  67c4576dc134_add_telegram_tables_and_user_timezone_.py  7b3bcf9fa0c1_create_cvs_table.py  801849a2d639_create_chat_messages_table.py  92c4e7d328be_create_users_table.py  abd80db79dbd_add_cv_id_to_applications.py
backend/app/: main.py
backend/app/api/v1/: applications.py  auth.py  chat.py  cvs.py  metrics.py  router.py  telegram.py  users.py
backend/app/bot/: __main__.py  db.py
backend/app/bot/handlers/: cancel.py  dialog.py  start.py
backend/app/core/: config.py  constants.py  database.py  deps.py  exceptions.py  pagination.py  security.py
backend/app/models/: __init__.py  application.py  chat_message.py  cv.py  password_reset.py  telegram_connection_code.py  telegram_conversation.py  telegram_link.py  user.py
backend/app/schemas/: application.py  auth.py  chat.py  cv.py  metrics.py  telegram.py  user.py
backend/app/services/: application_service.py  auth_service.py  chat_service.py  claude_client.py  cv_service.py  groq_client.py  metrics_service.py  password_reset_service.py  telegram_service.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_chat.py  test_cvs.py  test_metrics.py  test_security.py  test_users.py
(+173 files in other folders)
