[project]
name = "jobbi-backend"
version = "0.1.0"
description = "Jobbi — job search assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.14,<2",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "email-validator>=2.0,<3",
    "structlog>=24.0,<26",
    "sentry-sdk[fastapi]>=2.0,<3",
    "httpx>=0.27,<1",
    "anthropic>=0.40,<1",
    "python-telegram-bot[job-queue]>=21,<22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]